--- a/webpages/africa.html
+++ b/webpages/africa.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="Many of the most popular world music tracks originate from Africa countries. Explore world music from Morocco, South Africa, and Ethiopia. ">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
 
     <!-- The title below will appear in the tab in the web broswer -->
-    <title>Add title here</title>
 
     <!-- Bootstrap core CSS file -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
