--- a/webpages/asia.html
+++ b/webpages/asia.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="Featuring popular world music tracks from India and China, enter this website to widen your cultural knowledge whilst entering a musical journey.">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
 
     <!-- The title below will appear in the tab in the web broswer -->
-    <title>Add title here</title>
+    <title>World Music - Asia</title>
 
     <!-- Bootstrap core CSS file -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
