--- a/webpages/europe.html
+++ b/webpages/europe.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="World music that originates from Europe is extremely varied, featuring cultural traditions dating back many century’s it is a wonder to explore.">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
