--- a/webpages/france.html
+++ b/webpages/france.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="Explore French music styles, and learn about one of the most influential world music artists to date, Hector Berloiz">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
