--- a/webpages/india.html
+++ b/webpages/india.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="Home to some instruments key to world music, India are constantly producing new world music tracks and styles that are just waiting to be explored.">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
