--- a/webpages/intro.html
+++ b/webpages/intro.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="What is world music? World music encompasses a wide variety of different genres, there is certainly going to be a style that you enjoy.">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
 
     <!-- The title below will appear in the tab in the web broswer -->
-    <title>Add title here</title>
+    <title>World Music - Introduction</title>
 
     <!-- Bootstrap core CSS file -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
