--- a/webpages/morocco.html
+++ b/webpages/morocco.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Add description here.">
+    <meta name="description" content="Morocco has a bubbling world music scene that is not to be missed, learn about their two most popular styles.">
     <meta name="author" content="Jess Coulson">
     <link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
