--- a/webpages/africa.html
+++ b/webpages/africa.html
@@ -10,6 +10,7 @@
 
 
     <!-- The title below will appear in the tab in the web broswer -->
+    <title>World Music - Africa</title>
 
     <!-- Bootstrap core CSS file -->
     <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
