--- a/webpages/japan.html
+++ b/webpages/japan.html
@@ -125,12 +125,21 @@
             src="../images/shamison.jpg" alt="a picture of a shamisen" height=40% width=40%>
         </div>   
 <h3>The Shakuhachi</h3>
+<div class="col-md-7">
 <p>This instrument is a flute that is made of bamboo, it is played by blowing on one
     end, on the other end there are four holes on the front, and one on the back, because
     of this many English people refer to the Shakuhachi as the 'five-holed bamboo flute'. 
     These five holes produce a complete range of sounds; it is actually because these holes 
     are so small that the Shakuhachi manages to produce its distinctively poignant tone.
 </p>
+</div>
+
+<div class="col-md-5">
+    <img class="img-responsive center-block"
+    src="../images/shak.jpg" alt="a picture of a shakuhachi">
+</div>
+
+
 
 </div>
 
